.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Employee_Salary_Review__c.object
<CustomObject>
    <description>Stores employee salary reviews for up to 3 levels of reviewer
When published, creates new Salary and Bonus records</description>
    <fields>
        <fullName>xcdhcm__Calculate_date_difference__c</fullName>
        <description>If the current comp effective from is less than 365 days before the Salary Review effective from, highlight the current Comp effective from in bold</description>
        <formula>xcdhcm__Salary_Review__r.xcdhcm__Salary_increase_effective_from__c - xcdhcm__Effective_from__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate date difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compensation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Compensation__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Compensation__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Continuous_service_date__c</fullName>
        <description>The reviewer may be interested in how long the person has been with the company</description>
        <label>Continuous service date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Conversion_rate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Use field when bonuses are awarded in Corporate currency.  Set the rate equal to the Employee&apos;s Local Currency Conversion Rate (see Manage Currencies or update from Company).  Note Currency values must not be changed while the Salary Review is under way.</inlineHelpText>
        <label>Bonus currency conversion rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_salary__c</fullName>
        <label>Current salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_from__c</fullName>
        <label>Effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_dept__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Department_L__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_leaving_date__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Employee_leaving_date__c</formula>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_number__c</fullName>
        <label>Employee number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_status__c</fullName>
        <description>This field used to display employment status.</description>
        <formula>TEXT(xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Employment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <inlineHelpText>Job title associated with the compensation record</inlineHelpText>
        <label>Job title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_annual_bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to last bonus award record</inlineHelpText>
        <label>Last annual bonus</label>
        <referenceTo>xcdhcm__Benefit__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_bonus_award_date__c</fullName>
        <inlineHelpText>Date on which the last bonus was awarded</inlineHelpText>
        <label>Last bonus award date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_bonus_payment__c</fullName>
        <inlineHelpText>Most recent annual bonus award</inlineHelpText>
        <label>Last bonus payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If( 
not(isblank( xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Companies__r.xcdhcm__GDPR_data_retention_threshold__c)), 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Companies__r.xcdhcm__GDPR_data_retention_threshold__c, 
xcdhcm__Employee_leaving_date__c &lt; xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Companies__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Line_manager__c</fullName>
        <description>This field used to display line manager</description>
        <formula>xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Manager_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_no__c</fullName>
        <label>Payroll no</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Performance_rating__c</fullName>
        <inlineHelpText>Rating in last performance review</inlineHelpText>
        <label>Performance rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Performance_review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to last performance review record</inlineHelpText>
        <label>Performance review</label>
        <referenceTo>xcdhcm__Employee_Review__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_amount_1__c</fullName>
        <inlineHelpText>Bonus payment - as recommended by Reviewer 1</inlineHelpText>
        <label>Proposed bonus amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_amount_2__c</fullName>
        <inlineHelpText>Bonus payment - as recommended by Reviewer 2</inlineHelpText>
        <label>Proposed bonus amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_amount_3__c</fullName>
        <inlineHelpText>Bonus payment - final recommendation</inlineHelpText>
        <label>Proposed bonus amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_salary_1__c</fullName>
        <inlineHelpText>Bonus as % salary - as recommended by Reviewer 1</inlineHelpText>
        <label>Proposed bonus % salary 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_salary_2__c</fullName>
        <inlineHelpText>Bonus as % salary - as recommended by Reviewer 2</inlineHelpText>
        <label>Proposed bonus % salary 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_salary_3__c</fullName>
        <inlineHelpText>Bonus as % salary - final recommendation</inlineHelpText>
        <label>Proposed bonus % salary 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_target_1__c</fullName>
        <label>Proposed bonus % target 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_target_2__c</fullName>
        <label>Proposed bonus % target 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_bonus_per_target_3__c</fullName>
        <label>Proposed bonus % target 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_1__c</fullName>
        <inlineHelpText>Salary increase amount - Reviewer 1 recommendation</inlineHelpText>
        <label>Proposed increase 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_2__c</fullName>
        <inlineHelpText>Salary increase amount - Reviewer 2 recommendation</inlineHelpText>
        <label>Proposed increase 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_3__c</fullName>
        <inlineHelpText>Salary increase amount - final recommendation</inlineHelpText>
        <label>Proposed increase 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_per_1__c</fullName>
        <inlineHelpText>Salary increase as % of current salary - Reviewer 1 recommendation</inlineHelpText>
        <label>Proposed increase % 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_per_2__c</fullName>
        <inlineHelpText>Salary increase as % of current salary - Reviewer 2 recommendation</inlineHelpText>
        <label>Proposed increase % 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_increase_per_3__c</fullName>
        <inlineHelpText>Salary increase as % of current salary - final recommendation</inlineHelpText>
        <label>Proposed increase % 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_next_year_target_bonus_1__c</fullName>
        <description>This field used to display Bonus OTE% from compensation</description>
        <label>Proposed next year target bonus % 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_next_year_target_bonus_2__c</fullName>
        <description>This field used to display Bonus OTE% from compensation</description>
        <label>Proposed next year target bonus % 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_next_year_target_bonus_3__c</fullName>
        <description>This field used to display Bonus OTE% from compensation</description>
        <label>Proposed next year target bonus % 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_salary_1__c</fullName>
        <inlineHelpText>Base salary for next year - Reviewer 1 recommendation</inlineHelpText>
        <label>Proposed salary 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_salary_2__c</fullName>
        <inlineHelpText>Base salary for next year - Reviewer 2 recommendation</inlineHelpText>
        <label>Proposed salary 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Proposed_salary_3__c</fullName>
        <inlineHelpText>Base salary for next year - final recommendation</inlineHelpText>
        <label>Proposed salary 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Published_bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store benefit after published</description>
        <label>Published bonus</label>
        <referenceTo>xcdhcm__Benefit__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews (Published bonus)</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Published_bonus_status__c</fullName>
        <formula>IF(
AND(ispickval(xcdhcm__Status__c , &quot;Published&quot;), NOT(ISBLANK(xcdhcm__Published_bonus__c)),
CEILING(xcdhcm__Published_bonus__r.xcdhcm__Payment_amount__c/ xcdhcm__Conversion_rate__c) =  CEILING(xcdhcm__Proposed_bonus_amount_4__c)
)
, 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 40),  
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 40) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published bonus check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Published_compensation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store compensation after published</description>
        <label>Published compensation</label>
        <referenceTo>xcdhcm__Compensation__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews (Published compensation)</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Published_compensation_status__c</fullName>
        <formula>IF(AND(ispickval(xcdhcm__Status__c , &quot;Published&quot;), NOT(ISBLANK(xcdhcm__Published_compensation__c)),
xcdhcm__Published_compensation__r.xcdhcm__Base_Salary__c= xcdhcm__Proposed_salary_4__c)
,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 40),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 40)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published compensation check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_meeting_date__c</fullName>
        <inlineHelpText>Performance review took place on this date</inlineHelpText>
        <label>Review meeting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_notes_1__c</fullName>
        <inlineHelpText>Reviewer 1 notes on salary or bonus proposals</inlineHelpText>
        <label>Review notes 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_notes_2__c</fullName>
        <inlineHelpText>Reviewer 2 notes on salary or bonus proposals</inlineHelpText>
        <label>Review notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_notes_3__c</fullName>
        <inlineHelpText>Reviewer 3 notes on salary or bonus proposals</inlineHelpText>
        <label>Review notes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Review_status__c</fullName>
        <formula>TEXT(xcdhcm__Salary_Review__r.xcdhcm__Review_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary review status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewe_title_2__c</fullName>
        <formula>xcdhcm__Reviewer_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewer 2 title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer1_email__c</fullName>
        <label>Reviewer1 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer2_email__c</fullName>
        <label>Reviewer2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer3_email__c</fullName>
        <label>Reviewer 3 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Salary_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_1_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checks where Reviewer 1 has submitted a recommendation</inlineHelpText>
        <label>Reviewer 1 submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_1_title__c</fullName>
        <label>Reviewer 1 name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Salary_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_2_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checks where Reviewer 2 has submitted a recommendation</inlineHelpText>
        <label>Reviewer 2 submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_2_title__c</fullName>
        <label>Reviewer 2 name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Salary_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_3_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checks where Reviewer 3 has submitted a recommendation</inlineHelpText>
        <label>Reviewer 3 submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_3_title__c</fullName>
        <label>Reviewer 3 name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_4_email__c</fullName>
        <label>Reviewer 4 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_4_name__c</fullName>
        <label>Reviewer 4 name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_title_1__c</fullName>
        <formula>xcdhcm__Reviewer_1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewer 1 title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reviewer_title_3__c</fullName>
        <formula>xcdhcm__Reviewer_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewer 3 title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Salary_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salary review</label>
        <referenceTo>xcdhcm__Salary_Review__c</referenceTo>
        <relationshipLabel>Employee Salary Reviews</relationshipLabel>
        <relationshipName>Employee_Salary_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Salary_review_name__c</fullName>
        <formula>xcdhcm__Salary_Review__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary review name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Employee salary review status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>xcdhcm__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Target_bonus__c</fullName>
        <inlineHelpText>On target bonus for year under review</inlineHelpText>
        <label>Target bonus</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Target_bonus_per__c</fullName>
        <inlineHelpText>On target bonus as % current salary</inlineHelpText>
        <label>Target bonus %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__View_salary_review__c</fullName>
        <description>This field used to redirect to my team page</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&apos;apex/MyTeam&apos;</formula>
        <label>View salary review</label>
        <type>Text</type>
    </fields>
    <label>Employee Salary Review</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Salary Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__XCD_Sharing__c</fullName>
        <label>XCD_Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>xcdhcm__Do_not_allow_reviewer_to_edit_status</fullName>
        <active>true</active>
        <description>Allow Reviewer 1 (or SRA) to edit only Review 1 boxes, Same as Reviewer 2, Reviewer 3 
When Status contains 1, only Reviewer 1 (or SRA) can edit; same as Reviewer 2, Reviewer 3</description>
        <errorConditionFormula>OR(
AND( 
OR( 
ISCHANGED(xcdhcm__Status__c), 
ISCHANGED(xcdhcm__Reviewer_1_submitted__c) 
), 
$User.Id == xcdhcm__Reviewer_1__c, 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos;, 
OR(NOT(ISPICKVAL(xcdhcm__Status__c,&quot;Review 1 submitted&quot;)), 
NOT(xcdhcm__Reviewer_1_submitted__c = true) 
)
), 

AND( 
OR( 
ISCHANGED(xcdhcm__Status__c), 
ISCHANGED(xcdhcm__Reviewer_2_submitted__c) 
), 
$User.Id == xcdhcm__Reviewer_2__c, 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos;, 
OR(NOT(ISPICKVAL(xcdhcm__Status__c,&quot;Review 2 submitted&quot;)), 
NOT(xcdhcm__Reviewer_2_submitted__c = true) 
)
), 

AND( 
OR( 
ISCHANGED(xcdhcm__Status__c), 
ISCHANGED(xcdhcm__Reviewer_3_submitted__c) 
), 
$User.Id == xcdhcm__Reviewer_3__c, 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos;, 
OR(NOT(ISPICKVAL(xcdhcm__Status__c,&quot;Review 3 submitted&quot;)), 
NOT(xcdhcm__Reviewer_3_submitted__c = true) 
) 
), 
AND( 
OR( 
ISCHANGED(xcdhcm__Status__c), 
ISCHANGED(xcdhcm__Reviewer_4_submitted__c) 
), 
$User.Id == xcdhcm__Reviewer_4__c, 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos;, 
OR(NOT(ISPICKVAL(xcdhcm__Status__c,&quot;Review 4 submitted&quot;)), 
NOT(xcdhcm__Reviewer_4_submitted__c = true) 
) 
) 
)</errorConditionFormula>
        <errorMessage>You are not permitted to edit records. Please contact HRMS Salary Review Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Restrict_reviewer_to_edit_records</fullName>
        <active>true</active>
        <description>Allow Reviewer 1 (or SRA) to edit only Review 1 boxes, Same as Reviewer 2, Reviewer 3
When Status contains 1, only Reviewer 1 (or SRA) can edit;same as Reviewer 2, Reviewer 3</description>
        <errorConditionFormula>OR( 
AND( 
OR(NOT(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 1&quot;)),AND(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 1&quot;),$User.Id &lt;&gt; xcdhcm__Reviewer_1__c)), 
OR( 
ISCHANGED(xcdhcm__Proposed_increase_per_1__c), 
ISCHANGED(xcdhcm__Proposed_increase_1__c), 
ISCHANGED(xcdhcm__Proposed_salary_1__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_salary_1__c), 
ISCHANGED(xcdhcm__Proposed_bonus_amount_1__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_target_1__c), 
ISCHANGED(xcdhcm__Proposed_next_year_target_bonus_1__c), 
ISCHANGED(xcdhcm__Review_notes_1__c) 
), 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator), $Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos; 
), 
AND( 
OR(NOT(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 2&quot;)),AND(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 2&quot;),$User.Id &lt;&gt; xcdhcm__Reviewer_2__c)), OR( 
ISCHANGED(xcdhcm__Proposed_increase_per_2__c), 
ISCHANGED(xcdhcm__Proposed_increase_2__c), 
ISCHANGED(xcdhcm__Proposed_salary_2__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_salary_2__c), 
ISCHANGED(xcdhcm__Proposed_bonus_amount_2__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_target_2__c), 
ISCHANGED(xcdhcm__Proposed_next_year_target_bonus_2__c), 
ISCHANGED(xcdhcm__Review_notes_2__c) 
), 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos; 

), 
AND( 
OR(NOT(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 3&quot;)),AND(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 3&quot;),$User.Id &lt;&gt; xcdhcm__Reviewer_3__c)), OR( 
ISCHANGED(xcdhcm__Proposed_increase_3__c), 

ISCHANGED(xcdhcm__Proposed_increase_per_3__c), 
ISCHANGED(xcdhcm__Proposed_salary_3__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_salary_3__c), 
ISCHANGED(xcdhcm__Proposed_bonus_amount_3__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_target_3__c), 
ISCHANGED(xcdhcm__Proposed_next_year_target_bonus_3__c), 
ISCHANGED(xcdhcm__Review_notes_3__c) 
), 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos; 

), 
AND( 
OR(NOT(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 4&quot;)),AND(ISPICKVAL(PRIORVALUE(xcdhcm__Status__c),&quot;Review 4&quot;),$User.Id &lt;&gt; xcdhcm__Reviewer_4__c)), OR( 

ISCHANGED(xcdhcm__Proposed_increase_per_4__c), 
ISCHANGED(xcdhcm__Proposed_increase_4__c), 
ISCHANGED(xcdhcm__Proposed_salary_4__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_salary_4__c), 
ISCHANGED(xcdhcm__Proposed_bonus_amount_4__c), 
ISCHANGED(xcdhcm__Proposed_bonus_per_target_4__c), 
ISCHANGED(xcdhcm__Proposed_next_year_target_bonus_4__c), 
ISCHANGED(xcdhcm__Review_notes_4__c) 
), 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos; 

), 
AND( 
OR( 
ISCHANGED(xcdhcm__Salary_Review__c), 
ISCHANGED(xcdhcm__Conversion_rate__c), 
ISCHANGED(CurrencyIsoCode), 
ISCHANGED(Name), 
ISCHANGED(xcdhcm__Company__c), 
ISCHANGED(xcdhcm__Job_title__c), 
ISCHANGED(xcdhcm__Location__c), 
ISCHANGED(xcdhcm__Current_salary__c), 
ISCHANGED(xcdhcm__Effective_from__c), 
ISCHANGED(xcdhcm__Compensation__c), 
ISCHANGED(xcdhcm__Target_bonus__c), 
ISCHANGED(xcdhcm__Target_bonus_per__c), 
ISCHANGED(xcdhcm__Last_bonus_payment__c), 
ISCHANGED(xcdhcm__Last_bonus_award_date__c), 
ISCHANGED(xcdhcm__Reviewer_1__c), 
ISCHANGED(xcdhcm__Reviewer_1_title__c), 
ISCHANGED(xcdhcm__Reviewer_2__c), 
ISCHANGED(xcdhcm__Reviewer_2_title__c), 
ISCHANGED(xcdhcm__Reviewer_3__c), 
ISCHANGED(xcdhcm__Reviewer_3_title__c) 
), 
NOT($Permission.xcdhcm__HRMS_Salary_Review_Administrator),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;HRMS System Admin&apos; 
)
)</errorConditionFormula>
        <errorMessage>You are not permitted to edit records. Please contact HRMS Salary Review Administrator.</errorMessage>
    </validationRules>
</CustomObject>